buildscript {
    ext {
        springBootVersion = '2.0.2.RELEASE'
    }
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
    }
}

apply plugin: 'java'
apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'

group = 'io.orvisual'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = 8

repositories {
    mavenCentral()
}

//compileJava {
//    options.compilerArgs += ["--add-modules", "java.xml.bind"]
//}
//
//compileTestJava {
//    options.compilerArgs += ["--add-modules", "java.xml.bind"]
//}

/**
 * java.xml.bind issue with JDK9 <a href="https://stackoverflow.com/a/43574427">see for details.</a>
 * <code>
 *     Caused by: java.lang.ClassNotFoundException: javax.xml.bind.JAXBException
 * </code>
 */
test {
    if (JavaVersion.current() == JavaVersion.VERSION_1_9) {
        jvmArgs += ['--add-modules',  'java.xml.bind']
    }
}


dependencies {
    compile('org.springframework.boot:spring-boot-starter-data-jpa')
    compile('org.springframework.boot:spring-boot-starter-data-rest')
    compile('org.springframework.boot:spring-boot-starter-hateoas')
    compile('org.springframework.boot:spring-boot-starter-web')
    compile('org.springframework.data:spring-data-rest-hal-browser')
    compile('com.google.guava:guava:25.0-jre')

    runtime('org.springframework.boot:spring-boot-devtools')
    runtime('com.h2database:h2')

    compileOnly('org.projectlombok:lombok')

    testCompile('org.springframework.boot:spring-boot-starter-test')
    testCompile('com.github.stefanbirkner:system-rules:1.16.1')
    testCompileOnly('org.projectlombok:lombok')
}
